objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Has_SSD_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has SSD Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hoopla_ActionEvent_Triggered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox to notify Hoopla to fire action event</description>
        <label>Hoopla ActionEvent Triggered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hoopla_Secondary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hoopla Secondary</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ImpartnerPRM__DateAssignedToPartner__c</fullName>
        <label>Date Assigned to Partner</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ImpartnerPRM__IsDealRegistration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deal Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImpartnerPRM__NotifyPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImpartnerPRM__PartnerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ImpartnerPRM__PartnerContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.ImpartnerPRM__PartnerAccount__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.ImpartnerPRM__PartnerAccount__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ImpartnerPRM__PartnerLastModifiedDate__c</fullName>
        <label>Partner Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ImpartnerPRM__PartnerOpportunityAcceptance__c</fullName>
        <label>Partner Opportunity Acceptance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incr_Amount_Rnwl_Amount_Personal_Curr__c</fullName>
        <formula>Incremental_Amount_Renewal_Amount__c/ Exchange_Rate_to_Corporate__c * 
( 
Case($User.User_Currency_Custom__c, 
&quot;EUR&quot;, 0.7720, 
&quot;GBP&quot;, 0.6178, 
&quot;HKD&quot;, 7.8500, 
&quot;NZD&quot;, 1.2142, 
&quot;USD&quot;, 1.000, 
&quot;CNY&quot;, 6.3600, 
&quot;AUD&quot;, 0.9868, 
1) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incr Amount+Rnwl Amount (Personal Curr)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incremental_Amount_Personal_Currency__c</fullName>
        <formula>Incremental_Amount__c/ Exchange_Rate_to_Corporate__c * 
( 
Case($User.User_Currency_Custom__c, 
&quot;EUR&quot;, 0.7720, 
&quot;GBP&quot;, 0.6178, 
&quot;HKD&quot;, 7.8500, 
&quot;NZD&quot;, 1.2142, 
&quot;USD&quot;, 1.000, 
&quot;CNY&quot;, 6.3600, 
&quot;AUD&quot;, 0.9868, 
1) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incremental Amount (Personal Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incremental_Amount_Renewal_Amount__c</fullName>
        <formula>Incremental_Amount__c  + Renewal_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incremental Amount + Renewal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incremental_Amount__c</fullName>
        <description>New Sales revenue that is tied to the Opportunity</description>
        <label>Incremental Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Territory_Number__c</fullName>
        <formula>Account.Inside_Sales_Territory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inside Sales Territory Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <externalId>true</externalId>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Preference__c</fullName>
        <formula>Text(Account.Invoice_Preference__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Preference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSkipOppLockingValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used for bypass the Opp validation rule.</description>
        <label>IsSkipOppLockingValidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Child_Opportunity__c</fullName>
        <description>Set when an opportunity is created by using the “Generate MTS Opportunities“button or Generate Child Opportunities Button – to be used in validation rules and coding.</description>
        <formula>IF(ISBLANK(Master_Opportunity__c), FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if this is a child opportunity</inlineHelpText>
        <label>Is Child Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Digital_New_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Digital New Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Digital_Owner_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created to use in this batch - Ecom_AccountExecutiveBatch</description>
        <label>Is Digital Owner Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_GLI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The field is used for LCRM project.</description>
        <label>Is GLI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Master_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[BRS_MS9.1.02]Indicates that this Opportunity will have related children opportunities.</description>
        <inlineHelpText>Indicates if this Opportunity is Master</inlineHelpText>
        <label>Is Master Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that gets updated when Sales org migration has occured</description>
        <label>Is Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field used for Initial Submission actions in Approval process</description>
        <label>Is Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Trial_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DPS-22302 - Enterprise Trials - Opportunity Object - Create Is Trial Lead field</description>
        <label>Is Trial Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Status__c</fullName>
        <description>EDW	STS_ITM	Item Status	Text</description>
        <label>Item Status</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic Administrator</fullName>
                </value>
                <value>
                    <fullName>Administrative Assistant</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Assistant General Counsel</fullName>
                </value>
                <value>
                    <fullName>Attorney - Associate</fullName>
                </value>
                <value>
                    <fullName>Attorney - Contract Atty</fullName>
                </value>
                <value>
                    <fullName>Attorney - Corporate Counsel</fullName>
                </value>
                <value>
                    <fullName>Attorney - Educational Institu</fullName>
                </value>
                <value>
                    <fullName>Attorney - Government</fullName>
                </value>
                <value>
                    <fullName>Attorney - Managing Partner</fullName>
                </value>
                <value>
                    <fullName>Attorney - Other</fullName>
                </value>
                <value>
                    <fullName>Attorney - Partner</fullName>
                </value>
                <value>
                    <fullName>Attorney - Solo</fullName>
                </value>
                <value>
                    <fullName>Business Development Professio</fullName>
                </value>
                <value>
                    <fullName>CEO/President</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>CIO/CKO/CTO</fullName>
                </value>
                <value>
                    <fullName>COO/CAO</fullName>
                </value>
                <value>
                    <fullName>Chief Compliance Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Human Resources Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Marketing Officer</fullName>
                </value>
                <value>
                    <fullName>Clerk</fullName>
                </value>
                <value>
                    <fullName>Compliance Professional</fullName>
                </value>
                <value>
                    <fullName>Director of Library Services</fullName>
                </value>
                <value>
                    <fullName>Education &amp; Training Professio</fullName>
                </value>
                <value>
                    <fullName>Executive Officer - Other</fullName>
                </value>
                <value>
                    <fullName>Faculty</fullName>
                </value>
                <value>
                    <fullName>Fall Associate</fullName>
                </value>
                <value>
                    <fullName>Filing Professional (Ins, SEC)</fullName>
                </value>
                <value>
                    <fullName>Financial Professional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LATAM_Business_Unit__c</fullName>
        <label>Business Unit (LatAm)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bejerman</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>GTM</fullName>
                </value>
                <value>
                    <fullName>Integration Point</fullName>
                </value>
                <value>
                    <fullName>Laley</fullName>
                </value>
                <value>
                    <fullName>Mastersaf</fullName>
                </value>
                <value>
                    <fullName>Mexico - Corporate</fullName>
                </value>
                <value>
                    <fullName>Mexico - Print</fullName>
                </value>
                <value>
                    <fullName>Novaprolink</fullName>
                </value>
                <value>
                    <fullName>Paraguay</fullName>
                </value>
                <value>
                    <fullName>Peru</fullName>
                </value>
                <value>
                    <fullName>Revista - Online</fullName>
                </value>
                <value>
                    <fullName>Revista - Print</fullName>
                </value>
                <value>
                    <fullName>Revista - Telesales</fullName>
                </value>
                <value>
                    <fullName>SL - Corporate</fullName>
                </value>
                <value>
                    <fullName>TEDESCO</fullName>
                </value>
                <value>
                    <fullName>Uruguay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LATAM_Entitlement_Provided_Date__c</fullName>
        <description>Created as part of BLE45</description>
        <label>Entitlement Provided Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LATAM_Entitlement_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of BLE-45</description>
        <label>Entitlement Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCRMCredit_Risk_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of CRM -11131</description>
        <label>Credit Risk Category</label>
        <referenceTo>Source_System_Detail__c</referenceTo>
        <relationshipLabel>Opportunities (Credit Risk Category)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCRM_3E__c</fullName>
        <description>created for DPS-21541</description>
        <label>3E</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_Acct_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of DPS-20216</description>
        <label>Acct Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipLabel>Related Opportunity</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCRM_Auto_Renewal_Clause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Renewal Clause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCRM_Auto_Send_Renewal_Notice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Send Renewal Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCRM_Average_Bill_Rate_per_SOW__c</fullName>
        <formula>LCRM_Estimated_SOW_Amount_Nonrecurring__c/ LCRM_Estimated_Total_Hours_of_Effort__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Calculated Bill Rate per SOW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LCRM_Budget_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to indicate if budget for the purchase has been approved.</inlineHelpText>
        <label>Budget Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCRM_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Elite</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Large Law</fullName>
                </value>
                <value>
                    <fullName>Small Law</fullName>
                </value>
                <value>
                    <fullName>UKI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCRM_Calculated_Expiration_Date__c</fullName>
        <description>This field is created LCRM Release 3. It is being used in Process Builder to post a chatter message on Expiration Date.</description>
        <formula>Expiration_Date__c - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LCRM Calculated Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LCRM_Calculated_Incremental_USL__c</fullName>
        <description>CRM-17856: This is calculated field which shows Increment amount always in positive values(&gt;=0).</description>
        <formula>IF(LCRM_Total_Incremental_USL__c &lt; 0, 0, LCRM_Total_Incremental_USL__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Incremental - USL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_Calculated_Renewal_USL__c</fullName>
        <description>CRM-17856: This is difference between Total New ACV/Sales Price and Calculated Incremental</description>
        <formula>LCRM_Total_New_ACV_Sales_Price__c - LCRM_Calculated_Incremental_USL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Renewal - USL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_Cancellation_Approval_Status__c</fullName>
        <label>Cancellation Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCRM_Cancellation_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LCRM Cancellation Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCRM_Client_Signed_Date__c</fullName>
        <label>Client Signed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LCRM_Compliance_Solution__c</fullName>
        <description>created as part po DPS-22289</description>
        <label>Compliance Solution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-house - Avalara</fullName>
                </value>
                <value>
                    <fullName>In-house - Vertex</fullName>
                </value>
                <value>
                    <fullName>In-house - Sovos</fullName>
                </value>
                <value>
                    <fullName>In-house - Manual</fullName>
                </value>
                <value>
                    <fullName>Outsource - KPMG</fullName>
                </value>
                <value>
                    <fullName>Outsource - Deloitte</fullName>
                </value>
                <value>
                    <fullName>Outsource - PWC</fullName>
                </value>
                <value>
                    <fullName>Outsource - EY</fullName>
                </value>
                <value>
                    <fullName>Outsource - GT</fullName>
                </value>
                <value>
                    <fullName>Outsource - Avalara</fullName>
                </value>
                <value>
                    <fullName>Outsource - Vertex</fullName>
                </value>
                <value>
                    <fullName>Outsource - Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCRM_Contract_Analysis__c</fullName>
        <description>created for DPS-21541</description>
        <label>Contract Analysis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_Contract_Length__c</fullName>
        <label>Contract Length (months)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LCRM_Contract_Wizard_ID__c</fullName>
        <description>Contract Wizard ID.</description>
        <label>LCRM Contract Wizard ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Current_ACV_Maintenance__c</fullName>
        <label>Current ACV Maintenance</label>
        <summarizedField>OpportunityLineItem.LCRM_Current_ACV__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.LCRM_Product_Category__c</field>
            <operation>equals</operation>
            <value>Maintenance</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.LCRM_Action__c</field>
            <operation>notEqual</operation>
            <value>Remove</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.APTS_is_Primary_in_Bundle__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LCRM_Current_ACV_Product__c</fullName>
        <label>Current ACV Product</label>
        <summarizedField>OpportunityLineItem.LCRM_Current_ACV__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.LCRM_Product_Category__c</field>
            <operation>equals</operation>
            <value>Product</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.LCRM_Action__c</field>
            <operation>notEqual</operation>
            <value>Remove</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.APTS_is_Primary_in_Bundle__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LCRM_Current_ACV_Service__c</fullName>
        <label>Current ACV Service</label>
        <summarizedField>OpportunityLineItem.LCRM_Current_ACV__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.LCRM_Product_Category__c</field>
            <operation>equals</operation>
            <value>Service</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.LCRM_Action__c</field>
            <operation>notEqual</operation>
            <value>Remove</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.APTS_is_Primary_in_Bundle__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LCRM_Customer_Group__c</fullName>
        <description>Created as a part of CRM -11131</description>
        <label>Customer Group</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Elite_Territory_Name__c</fullName>
        <formula>Text(Account.LCRM_Elite_Territory__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elite Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Estimated_SOW_Amount_Nonrecurring__c</fullName>
        <label>Estimated Total SOW Amount-Nonrecurring</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_Estimated_Total_Hours_of_Effort__c</fullName>
        <label>Estimated Total Hours of Effort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LCRM_Expected_Project_Go_Live_Date__c</fullName>
        <label>Expected Project Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LCRM_Expected_Project_Start_Date__c</fullName>
        <label>Expected Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LCRM_Extended_Access_Date__c</fullName>
        <label>Extended Access Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LCRM_Extended_Negotiation_Date__c</fullName>
        <label>Extended Negotiation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LCRM_FindLaw__c</fullName>
        <description>created for DPS-21541</description>
        <label>FindLaw</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_Global_Trade__c</fullName>
        <description>created for DPS-21541</description>
        <label>Global Trade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_Incremental_Maintenance__c</fullName>
        <label>Incremental Maintenance</label>
        <summarizedField>OpportunityLineItem.LCRM_Incremental_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.LCRM_Product_Category__c</field>
            <operation>equals</operation>
            <value>Maintenance</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.LCRM_Action__c</field>
            <operation>notEqual</operation>
            <value>Remove</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LCRM_Incremental_Product__c</fullName>
        <label>Incremental Product</label>
        <summarizedField>OpportunityLineItem.LCRM_Incremental_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.LCRM_Product_Category__c</field>
            <operation>equals</operation>
            <value>Product</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.LCRM_Action__c</field>
            <operation>notEqual</operation>
            <value>Remove</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LCRM_Incremental_Service__c</fullName>
        <label>Incremental Service</label>
        <summarizedField>OpportunityLineItem.LCRM_Incremental_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.LCRM_Product_Category__c</field>
            <operation>equals</operation>
            <value>Service</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.LCRM_Action__c</field>
            <operation>notEqual</operation>
            <value>Remove</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LCRM_Incremental_percent__c</fullName>
        <formula>If(Renewal_Flag__c, IF(LCRM_Sum_of_Current_ACV__c = 0,0,LCRM_Total_Incremental_Family__c/LCRM_Sum_of_Current_ACV__c), 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Gain/Loss %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LCRM_Indirect_Tax__c</fullName>
        <description>created for DPS-21541</description>
        <label>Indirect Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_Integration_Source__c</fullName>
        <label>Integration Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Impartner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCRM_LPA_Percentage__c</fullName>
        <label>LPA%</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LCRM_Legal_Workflow__c</fullName>
        <description>created for DPS-21541</description>
        <label>Legal Workflow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_Maintenance_Commissionable_Discount__c</fullName>
        <label>Maintenance Commissionable Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_Material_Product__c</fullName>
        <description>Created as part of DPS-8814 for Lotus program, Updated as part of DPS-21630</description>
        <label>Material/Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Brand__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Product</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCRM_Migration__c</fullName>
        <label>Elite Migration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3E New (Cloud)</fullName>
                </value>
                <value>
                    <fullName>3E New (On-Prem)</fullName>
                </value>
                <value>
                    <fullName>3E SaaS</fullName>
                </value>
                <value>
                    <fullName>3E Upgrade</fullName>
                </value>
                <value>
                    <fullName>Enterprise to 3E</fullName>
                </value>
                <value>
                    <fullName>Enterprise to ProLaw</fullName>
                </value>
                <value>
                    <fullName>Enterprise Upgrade</fullName>
                </value>
                <value>
                    <fullName>Envision to 3E</fullName>
                </value>
                <value>
                    <fullName>Envision to 3E MS</fullName>
                </value>
                <value>
                    <fullName>ProLaw to 3E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCRM_Multi_Year_Indicator__c</fullName>
        <label>Multi Year Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>